# LogistikoCRM

./: .dockerignore  .env.development  .env.example  .gitignore  .pre-commit-config.yaml  ARCHIVE_REFACTORING.md  CLAUDE.md  CLEANUP_PLAN.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  ENV_SETUP.md  INSTALL.md  MANUAL_TEST_GUIDE.md  POLISH_REPORT.md  PRODUCTION_AUDIT_REPORT.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READY.md  REACT_TROUBLESHOOTING.md  README.md  REVIEW_REPORT.md  SETUP_GUIDE.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  env.example  fritz_monitor.py  manage.py  pyproject.toml  requirements-complete.txt  requirements-dev.txt  requirements.txt  setup-complete.ps1  setup.cfg  start.sh  start_dev.sh  start_network.bat  start_network.ps1  start_network.sh  stop_dev.sh  (+1 more)
.github/: CODE_OF_CONDUCT.md  SECURITY.md
accounting/: admin.py  admin2 .py  api_auth.py  api_clients.py  api_dashboard.py  api_document_upload.py  api_documents.py  api_door.py  api_email.py  api_emails.py  api_export_import.py  api_file_manager.py  api_gsis.py  api_notifications.py  api_obligation_profiles.py  api_obligation_settings.py  api_obligations.py  api_reports.py  api_search.py  api_tasmota_settings.py  api_users.py  api_voip.py  apps.py  client_sync.py  context_processors.py  export_import.py  forms.py  gsis_client.py  models.py  permissions.py  phone_utils.py  serializers.py  signals.py  tasks.py  tasmota_control.py  urls.py  views.py  views_main.py  views_τουμπανο.py
analytics/: urls.py
common/: admin.py  api_health.py  models.py
crm/: apps.py
crm-frontend/: package-lock.json  package.json
docs/: EMAIL_AUTOMATION_PLAN.md  SQL_SERVER_MIGRATION_PLAN.md
frontend/: .env.example  .gitignore  package-lock.json  package.json  vite.config.ts
help/: urls.py
inventory/: admin.py  invoice_mydata_detail.html  models.py
mydata/: admin.py  client.py  encryption.py  models.py  serializers.py  services.py  urls.py  views.py
scripts/: backup_cron.sh
settings/: admin.py  api.py  api_views.py  backup_urls.py  backup_utils.py  models.py  urls.py
voip/: api.py  serializers.py  settings.py  urls.py
webcrm/: celery.py  (+6 more)
(+280 files in other folders)
